Punto1/LabeledExpr.g4
grammar LabeledExpr; // rename to distinguish from Expr.g4

prog:   stat+ ;

stat:   expr NEWLINE                # printExpr
    |   ID '=' expr NEWLINE         # assign
    |   NEWLINE                     # blank
    ;
expr:   expr op=('*'|'/') expr      # MulDiv
    |   expr op=('+'|'-') expr      # AddSub
    |   COMPLEX                     # complex
    |   ID                          # id
    |   '(' expr ')'                # parens
    ;   
MUL :   '*' ; // assigns token name to '* used above in grammar
DIV :   '/' ;
ADD :   '+' ;
SUB :   '-' ;
ID  :   [a-zA-Z]+ ;      // match identifiers
INT :   [0-9]+ ;         // match integers
FLOAT:  ([0-9]+ '.' [0-9]* | '.' [0-9]+); // match floats
SIGN : ('+' | '-') ;  // match signs
COMPLEX: '('(INT|FLOAT)? SIGN? (INT|FLOAT) ('j'|'J')? ')'; //match complex
NEWLINE:'\r'? '\n' ;     // return newlines to parser (is end-statement signal)
WS  :   [ \t]+ -> skip ; // toss out whitespace
